fix header on mobile (#2924)
* fix header bar on mobile

* minor adjustment

--- a/src/modules/common-elements/labels.styles.less
+++ b/src/modules/common-elements/labels.styles.less
@@ -204,8 +204,6 @@
     &.Highlight {
       > span:first-of-type {
         .mono-9;
-
-        color: @color-shadow-text;
       }
 
       > span:last-of-type {
@@ -217,8 +215,6 @@
 
     > span:first-of-type {
       .mono-9;
-
-      color: @color-neutral;
     }
 
     > span:last-of-type {
